--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # Gradle
 org.gradle.jvmargs=-Xmx3g -XX:MaxMetaspaceSize=1g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-org.gradle.configuration-cache=true
-org.gradle.caching=true
+#org.gradle.configuration-cache=true
+#org.gradle.caching=true
 
 # Kotlin
 kotlin.code.style=official
